Fix: TTF-974 - jumping to main
https://digitaltools.phe.org.uk/browse/TTF-974

--- a/app/shared/components/Typography/style.scss
+++ b/app/shared/components/Typography/style.scss
@@ -548,20 +548,13 @@ p {
     padding-left: 5rem !important;
 
     .has-hover & {
-      &:hover:after {
-        right: auto;
-        left: 2rem;
-        background-image: url('/ui/svg/arrow-left.svg');
-      }
-    }
-
-    .has-hover & {
       &:active,
       &:hover {
 
         &:after {
           right: auto;
           left: 1rem;
+          background-image: url('/ui/svg/arrow-left.svg');
         }
       }
     }
